--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
+  <link rel="icon" href="assets/images/aluna.png" type="image/png">
   <title>Colégio Objetivo Capela</title>
 
   <!-- Bootstrap core CSS -->
@@ -25,13 +23,16 @@
     <div class="logo">
       <a href="#"><img src="assets/images/logo-site.png" alt="Logo"></a>
     </div>
-    <a href="#menu" class="menu-link"></a>
+    <a href="#menu" class="menu-link" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </a>
     <nav id="menu" class="main-nav" role="navigation">
       <ul class="main-menu">
         <li><a href="#section1">Home</a></li>
         <li><a href="#section2">Grade de Ensino</a></li>
         <li><a href="#section6">Contato</a></li>
-
       </ul>
     </nav>
   </header>
@@ -103,13 +104,9 @@
                       experiências lúdicas e educativas. Aqui, promovemos o desenvolvimento integral, estimulando a
                       curiosidade e a criatividade em um ambiente acolhedor.</p>
                     <div class="container-button">
-                      <a href="https://wa.me/<SEU_NUMERO>" class="whatsapp-button" id="whatsapp" target="_blank">
-                        <img src="assets/images/whatsapp.png" alt="WhatsApp">
-                        <!-- Substitua pelo caminho da sua imagem -->
-                        Saiba Mais!
-                      </a>
+                      <a href="https://wa.me/5515997538167" class="whatsapp-button" id="whatsapp" target="_blank">
+                        <img src="assets/images/whatsapp.png" alt="WhatsApp">Saiba Mais!</a>
                       </button>
-
                     </div>
                   </div>
                 </div>
@@ -125,11 +122,8 @@
                       Nossos alunos são incentivados a explorar diferentes áreas do saber, desenvolvendo habilidades
                       sociais e acadêmicas que os acompanharão por toda a vida.</p>
                     <div class="container-button">
-                      <a href="https://wa.me/<SEU_NUMERO>" class="whatsapp-button" target="_blank">
-                        <img src="assets/images/whatsapp.png" alt="WhatsApp">
-                        <!-- Substitua pelo caminho da sua imagem -->
-                        Saiba Mais!
-                      </a>
+                      <a href="https://wa.me/5515997538167" class="whatsapp-button" target="_blank">
+                        <img src="assets/images/whatsapp.png" alt="WhatsApp">Saiba Mais!</a>
                       </button>
                     </div>
                   </div>
@@ -145,7 +139,7 @@
                       desafios do Ensino Médio. Aqui, cultivamos o pensamento crítico e a autonomia, preparando nossos
                       estudantes para serem cidadãos conscientes e engajados.</p>
                     <div class="container-button">
-                      <a href="https://wa.me/<SEU_NUMERO>" class="whatsapp-button" target="_blank">
+                      <a href="https://wa.me/5515997538167" class="whatsapp-button" target="_blank">
                         <img src="assets/images/whatsapp.png" alt="WhatsApp">Saiba Mais!</a>
                       </button>
                     </div>
@@ -162,7 +156,7 @@
                       alunos para o mercado de trabalho e para o ingresso no ensino superior. Incentivamos a pesquisa, a
                       reflexão e o desenvolvimento de competências essenciais para a vida.</p>
                     <div class="container-button">
-                      <a href="https://wa.me/<SEU_NUMERO>" class="whatsapp-button" target="_blank">
+                      <a href="https://wa.me/5515997538167" class="whatsapp-button" target="_blank">
                         <img src="assets/images/whatsapp.png" alt="WhatsApp">Saiba Mais!</a>
                       </button>
                     </div>
@@ -182,120 +176,140 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="assets/images/photo-1.png" / data-aos="fade">
+            <img src="assets/images/natacao-1.png" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/photo-2.png" " />
-      </div>
-      <div class=" swiper-slide">
-            <img src="assets/images/photo-3.png" " />
-      </div>
-      <div class=" swiper-slide">
-            <img src="assets/images/photo-4.png" " />
-      </div>
-      <div class=" swiper-slide">
-            <img src="assets/images/photo-5.png" " />
-      </div>
-      <div class=" swiper-slide">
-            <img src="assets/images/photo-6.png" " />
-      </div>
-    </div>
-    <div class=" swiper-button-next">
+            <img src="assets/images/natacao-2.png" />
           </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-pagination"></div>
+          <div class="swiper-slide">
+            <img src="assets/images/natacao-3.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-1.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-2.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-3.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-4.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-5.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-6.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-7.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-8.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-9.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-10.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-11.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-12.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-13.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/images/img-14.png" />
+          </div>
         </div>
-
+        <div class="swiper-pagination"></div>
+      </div>
   </section>
-
   <section class="section courses" data-section="section4">
     <div class="container-fluid">
       <div class="row" data-aos="fade-right">
         <div class="col-md-12">
-          <div class="section-headingdata-aos=" fade"">
-            <h2>Confira nossa Grade</h2>
+          <div class="section-heading" data-aos=" fade"">
+            <h2>Confira Nosso Espaço</h2>
           </div>
         </div>
-        <div class="owl-carousel owl-theme">
-          <div class="item">
-            <img src="assets/images/courses-01.jpg" alt="Course #1">
-            <div class="down-content">
-              <h4>Digital Marketing</h4>
-              <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
-
+        <div class=" owl-carousel owl-theme">
+            <div class="item">
+              <img src="assets/images/courses-01.jpg" alt="Course #1">
+              <div class="down-content">
+                <h4>Digital Marketing</h4>
+                <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-02.jpg" alt="Course #2">
-            <div class="down-content">
-              <h4>Business World</h4>
-              <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.</p>
-
+            <div class="item">
+              <img src="assets/images/courses-02.jpg" alt="Course #2">
+              <div class="down-content">
+                <h4>Business World</h4>
+                <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-03.jpg" alt="Course #3">
-            <div class="down-content">
-              <h4>Media Technology</h4>
-              <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-              </p>
-
+            <div class="item">
+              <img src="assets/images/courses-03.jpg" alt="Course #3">
+              <div class="down-content">
+                <h4>Media Technology</h4>
+                <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-04.jpg" alt="Course #4">
-            <div class="down-content">
-              <h4>Communications</h4>
-              <p>Download free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
-
+            <div class="item">
+              <img src="assets/images/courses-04.jpg" alt="Course #4">
+              <div class="down-content">
+                <h4>Communications</h4>
+                <p>Download free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-05.jpg" alt="">
-            <div class="down-content">
-              <h4>Business Ethics</h4>
-              <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-              </p>
-
+            <div class="item">
+              <img src="assets/images/courses-05.jpg" alt="">
+              <div class="down-content">
+                <h4>Business Ethics</h4>
+                <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-01.jpg" alt="">
-            <div class="down-content">
-              <h4>Photography</h4>
-              <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.</p>
-
+            <div class="item">
+              <img src="assets/images/courses-01.jpg" alt="">
+              <div class="down-content">
+                <h4>Photography</h4>
+                <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-02.jpg" alt="">
-            <div class="down-content">
-              <h4>Web Development</h4>
-              <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-              </p>
-
+            <div class="item">
+              <img src="assets/images/courses-02.jpg" alt="">
+              <div class="down-content">
+                <h4>Web Development</h4>
+                <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-03.jpg" alt="">
-            <div class="down-content">
-              <h4>Learn HTML CSS</h4>
-              <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
-
+            <div class="item">
+              <img src="assets/images/courses-03.jpg" alt="">
+              <div class="down-content">
+                <h4>Learn HTML CSS</h4>
+                <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-04.jpg" alt="">
-            <div class="down-content">
-              <h4>Social Media</h4>
-              <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-              </p>
-
+            <div class="item">
+              <img src="assets/images/courses-04.jpg" alt="">
+              <div class="down-content">
+                <h4>Social Media</h4>
+                <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
+                </p>
+              </div>
             </div>
-
           </div>
         </div>
-      </div>
   </section>
 
 
@@ -319,7 +333,7 @@
               <h4>Conheça nossa história</h4>
             </div>
             <figure>
-              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play"><img
+              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play" target="_blank"><img
                   src="assets/images/obj-thumb.png"></a>
             </figure>
           </article>
@@ -377,13 +391,13 @@
       <div class="row">
         <div class="col-md-6 contact-info">
           <h3>Contato</h3>
-          <p>Endereço: Rua Exemplo, 123, Cidade, Estado</p>
-          <p>Telefone: (11) 1234-5678</p>
-          <p>Email: contato@escolaexemplo.com</p>
+          <p>Endereço: Rod. Ver. João Antônio Nunes, Km129 - Iperozinho, Capela do Alto - SP, 18195-000</p>
+          <p>Telefone: (15) 99753-8167</p>
+          <p>Email: contato@colegioobjetivocapela.com.br</p>
           <div class="social-media">
-            <a href="#" target="_blank">WhatsApp</a>
-            <a href="#" target="_blank">Facebook</a>
-            <a href="#" target="_blank">Instagram</a>
+            <a href="https://wa.me/5515997538167" target="_blank">WhatsApp</a>
+            <a href="https://www.facebook.com/OBJETIVOCAPELA" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/objetivo.capeladoalto/" target="_blank">Instagram</a>
           </div>
         </div>
         <div class="col-md-6 policies">
@@ -464,7 +478,7 @@
     // ... (seu código JavaScript anterior) ...
   </script>
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="assets/js/menuhamburger.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/isotope.min.js"></script>
   <script src="assets/js/owl-carousel.js"></script>
