--- a/index.html
+++ b/index.html
@@ -243,72 +243,83 @@
         </div>
         <div class=" owl-carousel owl-theme">
             <div class="item">
-              <img src="assets/images/courses-01.jpg" alt="Course #1">
+              <img src="assets/images/natação.png" alt="Course #1">
               <div class="down-content">
-                <h4>Digital Marketing</h4>
-                <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
+                <h4>Núcleo aquático <em>mensal</em></h4>
+                <p>Em nossas aulas de recreação as crianças e adolecentes aprendem os primeiros movimentos aquáticos com
+                  jogos, brinquedos, brincadeiras e demais atividades criativas e motivadoras. É um método muito
+                  divertido e faz com que o aprendizado não seja repetitivo e excessivamente técnico.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-02.jpg" alt="Course #2">
+              <img src="assets/images/laboratorio.png" alt="Course #2">
               <div class="down-content">
-                <h4>Business World</h4>
-                <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.
-                </p>
+                <h4>Laboratório de <em>Ciências</em></h4>
+                <p>Com o estudo sistematizado dos alunos nos laboratórios além do
+                  fortalecimento de seus conhecimentos, é desenvolvido a autonomia
+                  e o protagonismo do aluno perante o seu aprendizado.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-03.jpg" alt="Course #3">
+              <img src="assets/images/maker.png" alt="Course #3">
               <div class="down-content">
-                <h4>Media Technology</h4>
-                <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-                </p>
+                <h4>Aulas <em>Maker</em></h4>
+                <p>A Cultura Maker estimula o desenvolvimento de diversas habilidades e
+                  competências, pois incentiva a imaginação, a invenção e a recriação. O Maker
+                  exercita a colaboração, a investigação e o reconhecimento de problemas do
+                  mundo real.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-04.jpg" alt="Course #4">
+              <img src="assets/images/treekking.png" alt="Course #4">
               <div class="down-content">
-                <h4>Communications</h4>
-                <p>Download free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
+                <h4>Treekking <em>Pedagógico</em></h4>
+                <p>As práticas corporais de aventura na natureza, enquanto conteúdo da educação
+                  física escolar, são atividades físicas realizadas em ambientes com pouca ou
+                  nenhuma interferência do homem, promovendo uma relação com o ambiente
+                  que nos cerca, carregadas de significados e com grande potencial crítico social,
+                  além de aspectos cognitivos.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-05.jpg" alt="">
+              <img src="assets/images/leitura.png" alt="">
               <div class="down-content">
-                <h4>Business Ethics</h4>
-                <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-                </p>
+                <h4>Aulas de <em>Leitura</em></h4>
+                <p>Em nossas aulas de leitura despertamos sempre o prazer da leitura em nossos
+                  alunos para despertar o potencial cognitivo e criativo. Promovendo o
+                  desenvolvimento do vocabulário, favorecendo a estabilização de formas
+                  ortográficas; Possibilitando o acesso aos diversos tipos de leitura na escola,
+                  buscando efetivar enquanto processo a leitura e a escrita.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-01.jpg" alt="">
+              <img src="assets/images/informatica.png" alt="">
               <div class="down-content">
-                <h4>Photography</h4>
-                <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.
-                </p>
+                <h4>Laboratório de <em>Informática</em></h4>
+                <p>Em nossas aulas de Informática os alunos aprendem os princípios e técnicas da
+                  Computação e suas tecnologias para identificar problemas e criar soluções
+                  computacionais, preferencialmente de forma cooperativa, bem como alicerçar
+                  descobertas em diversas áreas do conhecimento seguindo uma abordagem
+                  científica e inovadora.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/courses-02.jpg" alt="">
+              <img src="assets/images/ed fisica.png" alt="">
               <div class="down-content">
-                <h4>Web Development</h4>
-                <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-                </p>
+                <h4>Aulas <em>Eucação Física</em></h4>
+                <p>O objetivo principal da educação física escolar é promover o interesse dos
+                  alunos pelos exercícios, de modo que adquiram consciência dos benefícios
+                  promovidos a saúde por meio dessa prática, assim como pelo estímulo das
+                  funções cognitivas que envolvem a atenção, o raciocínio lógico e a memória.</p>
               </div>
             </div>
+          
             <div class="item">
-              <img src="assets/images/courses-03.jpg" alt="">
+              <img src="assets/images/ingles.png" alt="">
               <div class="down-content">
-                <h4>Learn HTML CSS</h4>
-                <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/courses-04.jpg" alt="">
-              <div class="down-content">
-                <h4>Social Media</h4>
-                <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-                </p>
+                <h4>Aulas de <em>Inglês</em></h4>
+                <p>Nas atividades de ensino de inglês com músicas oferecem à criança a vivência de fatos musicais, a fim
+                  de garantir que ela possa utilizar realmente a linguagem musical como instrumento de aprendizagem.</p>
               </div>
             </div>
           </div>
