--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
               <img src="assets/images/natação.png" alt="Course #1">
               <div class="down-content">
                 <h4>Núcleo aquático <em>mensal</em></h4>
-                <p>Em nossas aulas de recreação as crianças e adolecentes aprendem os primeiros movimentos aquáticos com
-                  jogos, brinquedos, brincadeiras e demais atividades criativas e motivadoras. É um método muito
-                  divertido e faz com que o aprendizado não seja repetitivo e excessivamente técnico.</p>
+                <p>Nas aulas de recreação, crianças e adolescentes aprendem os primeiros movimentos aquáticos por meio
+                  de jogos, brinquedos e atividades criativas. Esse método divertido torna o aprendizado mais dinâmico e
+                  menos técnico.</p>
               </div>
             </div>
             <div class="item">
@@ -274,22 +274,18 @@
               <img src="assets/images/treekking.png" alt="Course #4">
               <div class="down-content">
                 <h4>Treekking <em>Pedagógico</em></h4>
-                <p>As práticas corporais de aventura na natureza, enquanto conteúdo da educação
-                  física escolar, são atividades físicas realizadas em ambientes com pouca ou
-                  nenhuma interferência do homem, promovendo uma relação com o ambiente
-                  que nos cerca, carregadas de significados e com grande potencial crítico social,
-                  além de aspectos cognitivos.</p>
+                <p>As práticas corporais de aventura na natureza, na educação física escolar, são atividades realizadas
+                  em ambientes naturais, promovendo uma relação significativa com o meio ambiente e desenvolvendo
+                  aspectos críticos e cognitivos.</p>
               </div>
             </div>
             <div class="item">
               <img src="assets/images/leitura.png" alt="">
               <div class="down-content">
                 <h4>Aulas de <em>Leitura</em></h4>
-                <p>Em nossas aulas de leitura despertamos sempre o prazer da leitura em nossos
-                  alunos para despertar o potencial cognitivo e criativo. Promovendo o
-                  desenvolvimento do vocabulário, favorecendo a estabilização de formas
-                  ortográficas; Possibilitando o acesso aos diversos tipos de leitura na escola,
-                  buscando efetivar enquanto processo a leitura e a escrita.</p>
+                <p>Nas aulas de leitura, buscamos despertar o prazer pela leitura nos alunos, estimulando seu potencial
+                  cognitivo e criativo. Isso promove o desenvolvimento do vocabulário, a estabilização da ortografia e o
+                  acesso a diferentes tipos de leitura, fortalecendo o processo de leitura e escrita.</p>
               </div>
             </div>
             <div class="item">
@@ -313,7 +309,7 @@
                   funções cognitivas que envolvem a atenção, o raciocínio lógico e a memória.</p>
               </div>
             </div>
-          
+
             <div class="item">
               <img src="assets/images/ingles.png" alt="">
               <div class="down-content">
