--- a/index.html
+++ b/index.html
@@ -243,79 +243,68 @@
         </div>
         <div class=" owl-carousel owl-theme">
             <div class="item">
-              <img src="assets/images/natação.png" alt="Course #1">
+              <img src="assets/images/natação.svg" alt="natação img">
               <div class="down-content">
                 <h4>Núcleo aquático <em>mensal</em></h4>
-                <p>Nas aulas de recreação, crianças e adolescentes aprendem os primeiros movimentos aquáticos por meio
-                  de jogos, brinquedos e atividades criativas. Esse método divertido torna o aprendizado mais dinâmico e
-                  menos técnico.</p>
+                <p>Metodologia lúdica onde crianças e adolescentes aprendem natação através de jogos e atividades
+                  recreativas. Um ambiente divertido que torna o aprendizado natural e prazeroso.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/laboratorio.png" alt="Course #2">
+              <img src="assets/images/laboratorio.svg" alt="laboratorio img">
               <div class="down-content">
                 <h4>Laboratório de <em>Ciências</em></h4>
-                <p>Com o estudo sistematizado dos alunos nos laboratórios além do
-                  fortalecimento de seus conhecimentos, é desenvolvido a autonomia
-                  e o protagonismo do aluno perante o seu aprendizado.</p>
+                <p>Experiências práticas que desenvolvem autonomia e protagonismo dos alunos. Um ambiente onde teoria e
+                  prática se encontram para fortalecer o conhecimento científico.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/maker.png" alt="Course #3">
+              <img src="assets/images/maker.svg" alt="maker img">
               <div class="down-content">
                 <h4>Aulas <em>Maker</em></h4>
-                <p>A Cultura Maker estimula o desenvolvimento de diversas habilidades e
-                  competências, pois incentiva a imaginação, a invenção e a recriação. O Maker
-                  exercita a colaboração, a investigação e o reconhecimento de problemas do
-                  mundo real.</p>
+                <p>Espaço que estimula criatividade, inovação e resolução de problemas reais. Os alunos desenvolvem
+                  projetos práticos, exercitando colaboração e pensamento crítico.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/treekking.png" alt="Course #4">
+              <img src="assets/images/treekking.svg" alt="treekking img">
               <div class="down-content">
                 <h4>Treekking <em>Pedagógico</em></h4>
-                <p>As práticas corporais de aventura na natureza, na educação física escolar, são atividades realizadas
-                  em ambientes naturais, promovendo uma relação significativa com o meio ambiente e desenvolvendo
-                  aspectos críticos e cognitivos.</p>
+                <p>Atividades de aventura que integram educação e natureza. Uma experiência única que desenvolve
+                  habilidades físicas e cognitivas em ambiente natural.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/leitura.png" alt="">
+              <img src="assets/images/leitura.svg" alt="leitura img">
               <div class="down-content">
                 <h4>Aulas de <em>Leitura</em></h4>
-                <p>Nas aulas de leitura, buscamos despertar o prazer pela leitura nos alunos, estimulando seu potencial
-                  cognitivo e criativo. Isso promove o desenvolvimento do vocabulário, a estabilização da ortografia e o
-                  acesso a diferentes tipos de leitura, fortalecendo o processo de leitura e escrita.</p>
+                <p>Desenvolvemos o amor pela leitura enquanto fortalecemos vocabulário e escrita. Uma jornada criativa
+                  que estimula o potencial cognitivo e imaginativo dos alunos.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/informatica.png" alt="">
+              <img src="assets/images/informatica.svg" alt="informatica img">
               <div class="down-content">
                 <h4>Laboratório de <em>Informática</em></h4>
-                <p>Em nossas aulas de Informática os alunos aprendem os princípios e técnicas da
-                  Computação e suas tecnologias para identificar problemas e criar soluções
-                  computacionais, preferencialmente de forma cooperativa, bem como alicerçar
-                  descobertas em diversas áreas do conhecimento seguindo uma abordagem
-                  científica e inovadora.</p>
+                <p>Ambiente de aprendizagem tecnológica onde os alunos desenvolvem soluções criativas e colaborativas.
+                  Uma abordagem inovadora que une computação e conhecimento prático.</p>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/ed fisica.png" alt="">
+              <img src="assets/images/ed fisica.svg" alt="fisica img">
               <div class="down-content">
-                <h4>Aulas <em>Eucação Física</em></h4>
-                <p>O objetivo principal da educação física escolar é promover o interesse dos
-                  alunos pelos exercícios, de modo que adquiram consciência dos benefícios
-                  promovidos a saúde por meio dessa prática, assim como pelo estímulo das
-                  funções cognitivas que envolvem a atenção, o raciocínio lógico e a memória.</p>
+                <h4>Aulas <em>Educação Física</em></h4>
+                <p>Programa que promove saúde e bem-estar através de exercícios planejados. Atividades que estimulam
+                  tanto o desenvolvimento físico quanto as funções cognitivas.</p>
               </div>
             </div>
 
             <div class="item">
-              <img src="assets/images/ingles.png" alt="">
+              <img src="assets/images/ingles.svg" alt="ingles img">
               <div class="down-content">
                 <h4>Aulas de <em>Inglês</em></h4>
-                <p>Nas atividades de ensino de inglês com músicas oferecem à criança a vivência de fatos musicais, a fim
-                  de garantir que ela possa utilizar realmente a linguagem musical como instrumento de aprendizagem.</p>
+                <p>Aprendizado dinâmico do inglês através da música. Uma metodologia envolvente que transforma a
+                  experiência musical em ferramenta de ensino do idioma.</p>
               </div>
             </div>
           </div>
