--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-md-12">
           <div id='tabs'>
             <div class="dropdown">
-              <button class="dropdown-btn">Click!</button>
+              <button class="dropdown-btn">Grade</button>
               <ul class="dropdown-content">
                 <li><a href='#tabs-1'>Ensino Infantil </a></li>
                 <li><a href='#tabs-2'>Ensino Fundamental I </a></li>
@@ -317,13 +317,13 @@
       <div class="row" data-aos="fade-left">
         <div class="col-md-6 align-self-center">
           <div class="left-content">
-            <span>Lorem ipsum dolor sit amet consectetur.</span>
-            <h4>Lorem, ipsum dolor. <em>Lorem.</em></h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, perferendis nulla cupiditate facere
-              voluptate repellat corrupti illo sequi quam error!
-              <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, omnis!
+            <span>Bem-vindo ao Colégio Objetivo, onde a educação transforma vidas.</span>
+            <h4>Excelência em ensino. <em>Foco no futuro.</em></h4>
+            <p>No Colégio Objetivo, valorizamos o potencial de cada aluno. Nossa missão é oferecer um ambiente acolhedor
+              e desafiador, promovendo o aprendizado integral.
+              <br><br>Com uma equipe dedicada, preparamos nossos estudantes para os desafios do mundo, formando cidadãos
+              críticos e conscientes.
             </p>
-
           </div>
         </div>
         <div class="col-md-6">
@@ -332,7 +332,7 @@
               <h4>Conheça nossa história</h4>
             </div>
             <figure>
-              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play" target="_blank"><img
+              <a href="#" class="play" target="_blank"><img
                   src="assets/images/obj-thumb.png"></a>
             </figure>
           </article>
