--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="col-md-12">
 
           <div class="section-heading" data-aos="fade">
-            <h2 id="cta">Confira nossa grade de ensino</h2>
+            <h2 id="cta">Grade de Ensino</h2>
           </div>
         </div>
         <div class="col-md-12">
@@ -238,7 +238,7 @@
       <div class="row" data-aos="fade-right">
         <div class="col-md-12">
           <div class="section-heading" data-aos=" fade"">
-            <h2>Confira Nosso Espaço</h2>
+            <h2>Nosso Espaço</h2>
           </div>
         </div>
         <div class=" owl-carousel owl-theme">
