--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!--header-->
   <header class="main-header clearfix" role="header">
     <div class="logo">
-      <a href="#"><img src="assets/images/logo-site.png" alt="Logo"></a>
+      <a href="#"><img src="assets/images/logo-site.png" alt="Logo" loading="lazy"></a>
     </div>
     <a href="#menu" class="menu-link" onclick="toggleMenu()">
       <span></span>
@@ -40,7 +40,7 @@
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
     <video autoplay muted loop id="bg-video">
-      <source src="assets/images/course-video.mp4" type="video/mp4" />
+      <source src="assets/images/course-video.mp4" type="video/mp4" loading="lazy"/>
     </video>
 
     <div class="video-overlay header-text">
@@ -99,7 +99,7 @@
               <article id='tabs-1'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/Infantil.png" alt="Infantil" data-aos="fade-up">
+                    <img src="assets/images/Infantil.png" alt="Infantil" data-aos="fade-up" loading="lazy">
                   </div>
                   <div class="col-md-6">
                     <h4>Ensino Infantil</h4>
@@ -109,7 +109,7 @@
                       curiosidade e a criatividade em um ambiente acolhedor.</p>
                     <div class="container-button">
                       <a href="https://wa.me/5515997538167" class="whatsapp-button" id="whatsapp" target="_blank">
-                        <img src="assets/images/whatsapp.png" alt="WhatsApp">Saiba Mais!</a>
+                        <img src="assets/images/whatsapp.png" alt="WhatsApp" loading="lazy">Saiba Mais!</a>
                       </button>
                     </div>
                   </div>
@@ -118,7 +118,7 @@
               <article id='tabs-2'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/Fundamental I.png" alt="Fundamental I">
+                    <img src="assets/images/Fundamental I.png" alt="Fundamental I" loading="lazy">
                   </div>
                   <div class="col-md-6">
                     <h4>Ensino Fundamental I</h4>
@@ -135,7 +135,7 @@
               <article id='tabs-3'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/Fundamental II.png" alt="">
+                    <img src="assets/images/Fundamental II.png" alt="fundamental 2" loading="lazy" >
                   </div>
                   <div class="col-md-6">
                     <h4>Ensino Fundamental II</h4>
@@ -152,7 +152,7 @@
               <article id='tabs-4'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/Ensino médio.png" alt="">
+                    <img src="assets/images/Ensino médio.png" alt="ensino medio" loading="lazy">
                   </div>
                   <div class="col-md-6">
                     <h4>Ensino Médio</h4>
@@ -179,55 +179,55 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="assets/images/natacao-1.png" />
+            <img src="assets/images/natacao-1.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/natacao-2.png" />
+            <img src="assets/images/natacao-2.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/natacao-3.png" />
+            <img src="assets/images/natacao-3.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-1.png" />
+            <img src="assets/images/img-1.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-2.png" />
+            <img src="assets/images/img-2.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-3.png" />
+            <img src="assets/images/img-3.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-4.png" />
+            <img src="assets/images/img-4.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-5.png" />
+            <img src="assets/images/img-5.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-6.png" />
+            <img src="assets/images/img-6.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-7.png" />
+            <img src="assets/images/img-7.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-8.png" />
+            <img src="assets/images/img-8.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-9.png" />
+            <img src="assets/images/img-9.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-10.png" />
+            <img src="assets/images/img-10.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-11.png" />
+            <img src="assets/images/img-11.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-12.png" />
+            <img src="assets/images/img-12.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-13.png" />
+            <img src="assets/images/img-13.png" loading="lazy"/>
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-14.png" />
+            <img src="assets/images/img-14.png" loading="lazy" />
           </div>
         </div>
         <div class="swiper-pagination"></div>
@@ -243,7 +243,7 @@
         </div>
         <div class=" owl-carousel owl-theme">
             <div class="item">
-              <img src="assets/images/natação.svg" alt="natação img">
+              <img src="assets/images/natação.svg" alt="natação img" loading="lazy">
               <div class="down-content">
                 <h4>Núcleo aquático <em>mensal</em></h4>
                 <p>Metodologia lúdica onde crianças e adolescentes aprendem natação através de jogos e atividades
@@ -251,7 +251,7 @@
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/laboratorio.svg" alt="laboratorio img">
+              <img src="assets/images/laboratorio.svg" alt="laboratorio img" loading="lazy">
               <div class="down-content">
                 <h4>Laboratório de <em>Ciências</em></h4>
                 <p>Experiências práticas que desenvolvem autonomia e protagonismo dos alunos. Um ambiente onde teoria e
@@ -259,7 +259,7 @@
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/maker.svg" alt="maker img">
+              <img src="assets/images/maker.svg" alt="maker img" loading="lazy">
               <div class="down-content">
                 <h4>Aulas <em>Maker</em></h4>
                 <p>Espaço que estimula criatividade, inovação e resolução de problemas reais. Os alunos desenvolvem
@@ -267,7 +267,7 @@
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/treekking.svg" alt="treekking img">
+              <img src="assets/images/treekking.svg" alt="treekking img" loading="lazy">
               <div class="down-content">
                 <h4>Treekking <em>Pedagógico</em></h4>
                 <p>Atividades de aventura que integram educação e natureza. Uma experiência única que desenvolve
@@ -275,7 +275,7 @@
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/leitura.svg" alt="leitura img">
+              <img src="assets/images/leitura.svg" alt="leitura img" loading="lazy">
               <div class="down-content">
                 <h4>Aulas de <em>Leitura</em></h4>
                 <p>Desenvolvemos o amor pela leitura enquanto fortalecemos vocabulário e escrita. Uma jornada criativa
@@ -283,7 +283,7 @@
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/informatica.svg" alt="informatica img">
+              <img src="assets/images/informatica.svg" alt="informatica img" loading="lazy" >
               <div class="down-content">
                 <h4>Laboratório de <em>Informática</em></h4>
                 <p>Ambiente de aprendizagem tecnológica onde os alunos desenvolvem soluções criativas e colaborativas.
@@ -291,7 +291,7 @@
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/ed fisica.svg" alt="fisica img">
+              <img src="assets/images/ed fisica.svg" alt="fisica img" loading="lazy" >
               <div class="down-content">
                 <h4>Aulas <em>Educação Física</em></h4>
                 <p>Programa que promove saúde e bem-estar através de exercícios planejados. Atividades que estimulam
@@ -300,7 +300,7 @@
             </div>
 
             <div class="item">
-              <img src="assets/images/ingles.svg" alt="ingles img">
+              <img src="assets/images/ingles.svg" alt="ingles img" loading="lazy" >
               <div class="down-content">
                 <h4>Aulas de <em>Inglês</em></h4>
                 <p>Aprendizado dinâmico do inglês através da música. Uma metodologia envolvente que transforma a
@@ -333,7 +333,7 @@
             </div>
             <figure>
               <a href="#" class="play" target="_blank"><img
-                  src="assets/images/obj-thumb.png"></a>
+                  src="assets/images/obj-thumb.png" loading="lazy" ></a>
             </figure>
           </article>
         </div>
@@ -350,7 +350,6 @@
           </div>
         </div>
         <div class="row">
-          <!-- Formulário na coluna da esquerda em telas médias e grandes -->
           <div class="col-md-6">
             <form class="colorful-form" id="myForm">
               <div class="form-group">
@@ -464,19 +463,15 @@
 
 
 
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script> <!-- Adicione o JS do AOS -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script> 
   <script>
-    // Inicialização do AOS
     AOS.init({
-      // Configurações opcionais, como duração da animação
-      duration: 1000, // 1 segundo
-      //easing: 'ease-in-out', // Tipo de easing
-      //once: true // Anima apenas uma vez
+      duration: 1000,
     });
 
-    // ... (seu código JavaScript anterior) ...
+    
   </script>
-  <!-- Bootstrap core JavaScript -->
+  
   <script src="assets/js/dropdown.js"></script>
   <script src="assets/js/menuhamburger.js"></script>
   <script src="assets/js/isotope.min.js"></script>
