--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
     <video autoplay muted loop id="bg-video">
-      <source src="assets/images/course-video.mp4" type="video/mp4" loading="lazy"/>
+      <source src="assets/images/course-video.mp4" type="video/mp4" loading="lazy" />
     </video>
 
     <div class="video-overlay header-text">
@@ -135,7 +135,7 @@
               <article id='tabs-3'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/Fundamental II.png" alt="fundamental 2" loading="lazy" >
+                    <img src="assets/images/Fundamental II.png" alt="fundamental 2" loading="lazy">
                   </div>
                   <div class="col-md-6">
                     <h4>Ensino Fundamental II</h4>
@@ -179,52 +179,52 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="assets/images/natacao-1.png" loading="lazy"/>
+            <img src="assets/images/natacao-1.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/natacao-2.png" loading="lazy"/>
+            <img src="assets/images/natacao-2.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/natacao-3.png" loading="lazy"/>
+            <img src="assets/images/natacao-3.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-1.png" loading="lazy"/>
+            <img src="assets/images/img-1.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-2.png" loading="lazy"/>
+            <img src="assets/images/img-2.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-3.png" loading="lazy"/>
+            <img src="assets/images/img-3.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-4.png" loading="lazy"/>
+            <img src="assets/images/img-4.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-5.png" loading="lazy"/>
+            <img src="assets/images/img-5.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-6.png" loading="lazy"/>
+            <img src="assets/images/img-6.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-7.png" loading="lazy"/>
+            <img src="assets/images/img-7.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-8.png" loading="lazy"/>
+            <img src="assets/images/img-8.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-9.png" loading="lazy"/>
+            <img src="assets/images/img-9.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-10.png" loading="lazy"/>
+            <img src="assets/images/img-10.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-11.png" loading="lazy"/>
+            <img src="assets/images/img-11.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-12.png" loading="lazy"/>
+            <img src="assets/images/img-12.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
-            <img src="assets/images/img-13.png" loading="lazy"/>
+            <img src="assets/images/img-13.png" loading="lazy" />
           </div>
           <div class="swiper-slide">
             <img src="assets/images/img-14.png" loading="lazy" />
@@ -283,7 +283,7 @@
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/informatica.svg" alt="informatica img" loading="lazy" >
+              <img src="assets/images/informatica.svg" alt="informatica img" loading="lazy">
               <div class="down-content">
                 <h4>Laboratório de <em>Informática</em></h4>
                 <p>Ambiente de aprendizagem tecnológica onde os alunos desenvolvem soluções criativas e colaborativas.
@@ -291,7 +291,7 @@
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/ed fisica.svg" alt="fisica img" loading="lazy" >
+              <img src="assets/images/ed fisica.svg" alt="fisica img" loading="lazy">
               <div class="down-content">
                 <h4>Aulas <em>Educação Física</em></h4>
                 <p>Programa que promove saúde e bem-estar através de exercícios planejados. Atividades que estimulam
@@ -300,7 +300,7 @@
             </div>
 
             <div class="item">
-              <img src="assets/images/ingles.svg" alt="ingles img" loading="lazy" >
+              <img src="assets/images/ingles.svg" alt="ingles img" loading="lazy">
               <div class="down-content">
                 <h4>Aulas de <em>Inglês</em></h4>
                 <p>Aprendizado dinâmico do inglês através da música. Uma metodologia envolvente que transforma a
@@ -332,8 +332,7 @@
               <h4>Conheça nossa história</h4>
             </div>
             <figure>
-              <a href="#" class="play" target="_blank"><img
-                  src="assets/images/obj-thumb.png" loading="lazy" ></a>
+              <a href="#" class="play" target="_blank"><img src="assets/images/obj-thumb.png" loading="lazy"></a>
             </figure>
           </article>
         </div>
@@ -414,9 +413,27 @@
       </div>
     </div>
   </footer>
-
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1618485162427865');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1618485162427865&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
+   
   <!-- Scripts -->
-
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js";
@@ -463,15 +480,15 @@
 
 
 
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script> 
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
       duration: 1000,
     });
 
-    
+
   </script>
-  
+
   <script src="assets/js/dropdown.js"></script>
   <script src="assets/js/menuhamburger.js"></script>
   <script src="assets/js/isotope.min.js"></script>
